--- a/packages/esm/package.json
+++ b/packages/esm/package.json
@@ -1,11 +1,15 @@
 {
-  "name": "esm",
-  "version": "1.0.0",
+  "name": "@proxero/esm",
+  "version": "0.1.0",
   "description": "Extended state machine",
-  "main": "src/main.ts",
+  "main": "bundle.js",
+  "types": "bundle.d.ts",
+  "files": [
+    "bundle.js", "bundle.d.ts"
+  ],
   "scripts": {
-    "build": "rollup -c",
-    "test": "jest"
+    "build": "tsc && rollup -c",
+    "test": "jest --watch"
   },
   "repository": {
     "type": "git",
@@ -21,8 +25,13 @@
     "@rollup/plugin-node-resolve": "^13.1.3",
     "@rollup/plugin-typescript": "^8.3.1",
     "@types/jest": "^27.4.1",
+    "@types/ramda": "^0.28.3",
     "jest": "^27.5.1",
+    "rollup-plugin-dts": "^4.2.0",
     "ts-jest": "^27.1.4",
     "typescript": "^4.6.3"
+  },
+  "dependencies": {
+    "ramda": "^0.28.0"
   }
 }
